fixed gap and span class

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,3 +2,15 @@
   max-width: 1184px;
   margin: 92px auto 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .cover {
+    margin-top: 90px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    margin-top: 66px;
+  }
+}
